# xmlSplit

./: .gitignore  Makefile  Makefile.in  config.h  configure  configure.ac  main.cpp  main.h  main.hpp
src/: Makefile  Makefile.am  Makefile.in  xmlSplit.cpp
